--- a/pages/posts/sample.md.example
+++ b/pages/posts/sample.md.example
@@ -27,8 +27,12 @@ $$
 You can add images to your posts. Place them in the `public/images/` directory and reference them in markdown:
 
 ```markdown
-![Alt text](/images/filename.jpg)
+![Alt text](/images/cat.png)
 ```
+
+Here's an example:
+
+![A cute cat](/images/cat.png)
 
 ## Typography
 
